# CrewSurf

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_crewai.bat  run_crewsurf.py  run_me_first.py  run_setup.py  setup.py
bridge/: cascade_bridge.py  run_bridge.py
core/: crew.py  main.py  run_with_cascade.py  windsurf_integration.py
core/agents/: chiefarchitect.py  chiefexecutiveofficer.py  director.py  headofsoftwarequality.py  masterdebugger.py  seniorprincipalengineer.py  softwareengineerintest.py  softwaretest.py  staffengineer.py  technicalwriter.py
core/config/: llm_config.py  project_config.py
core/patches/: __init__.py  litellm_patch.py
crewsurf/: __init__.py  start_team.py  windsurf_integration.py
docker/: Dockerfile.libgdx  docker-compose.yml
docs/: ADVANCED_ARCHITECTURE.md  CONDA_INTEGRATION.md  DOCKER_SETUP.md  EASY_GUIDE.md  RUNNING_GUIDE.md
examples/: example_crew.py  example_main.py
examples/agents/: example_chief_architect.py  example_lead_programmer.py  example_senior_engineer.py
