[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crewsurf"
version = "0.1.0"
description = "Seamlessly merge CrewAI's multi-agent teams with Windsurf/Cascade for powerful human-in-the-loop development."
readme = "README.md"
authors = [
    {name = "GitBreakfast", email = "your.email@example.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "crewai>=0.19.0",
    "langchain>=0.0.267",
    "langchain_community>=0.0.5",
    "chromadb>=0.4.13",
    "flask>=2.0.0",
    "requests>=2.28.0",
]

[project.urls]
"Homepage" = "https://github.com/gitbreakfast/crewsurf"
"Bug Tracker" = "https://github.com/gitbreakfast/crewsurf/issues"
